# nord-gtk-theme

./: .gitignore  README.md  meson.build  meson_options.txt
common/: meson.build
common/gtk-3.0/: meson.build
common/gtk-3.0/3.24/sass/: _applications.scss  _colors-public.scss  _colors.scss  _common.scss  _libhandy.scss  _nord.scss  gtk-solid-dark.scss  gtk-solid-darker.scss  gtk-solid-lighter.scss  gtk-solid.scss
common/index/: meson.build
common/index/dark/: index.theme
common/index/darker/: index.theme
common/index/light/: index.theme
common/index/lighter/: index.theme
